--- a/app.json
+++ b/app.json
@@ -10,7 +10,17 @@
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "react-native-ble-plx",
+        {
+          "isBackgroundEnabled": true,
+          "modes": ["peripheral", "central"],
+          "bluetoothAlwaysPermission": "Allow Bluetooth Keyboard App to connect to bluetooth devices"
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true,
 
